# openset-reid-finetune

./: .gitignore  README.md  inference_video.py  openset_reid_colab.ipynb  pyproject.toml  requirements.txt  train.py
utils/: datasets.py  upload_model_to_hf.py
